<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_principal"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvTitleConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="25dp"
        android:gravity="center"
        android:text="@string/app_title_registro"
        android:textColor="@color/celeste_principal"
        android:textSize="@dimen/size_title"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleConfirmation"
        android:background="@color/negro_principal"
        android:orientation="vertical"
        android:padding="@dimen/contain_padding">

        <TextView
            android:id="@+id/tvSubtituloMisRutinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:text="@string/text_datos_de_ingreso"
            android:textColor="@color/blanco_principal"
            android:textSize="@dimen/size_subtitle" />

        <include layout="@layout/divider_layout"></include>

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_usuario"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_clave"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big"/>

        <EditText
            android:id="@+id/etRepetirPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/hint_repetir_clave"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/back_button"
            android:textColor="@color/blanco_principal"
            android:textSize="@dimen/size_values_small" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/boton_redondo_style"
            android:text="@string/text_continuar"
            android:textColor="@color/blanco_principal"
            android:textSize="@dimen/size_values_big"
            android:gravity="center" />
    </TableRow>
</RelativeLayout>