<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_principal"
    tools:context=".NewPasswordActivity">

    <TextView
        android:id="@+id/tvTitleConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/app_title_nueva_clave"
        android:textColor="@color/celeste_principal"
        android:textSize="@dimen/size_title"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/layoutCentralLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitleConfirmation"
        android:background="#000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/edit_text_style_disenabled"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/gris_tv_disenabled"
            android:focusable="false"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_clave"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big"/>

        <EditText
            android:id="@+id/etRepetirPassword"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_repetir_clave"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/blanco_principal"
            android:textColorHint="@color/gris_hint"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_values_big" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/back_button"
            android:textColor="@color/blanco_principal"
            android:textSize="@dimen/size_values_small" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/boton_redondo_style"
            android:text="@string/text_confirmar"
            android:textColor="@color/blanco_principal"
            android:textSize="@dimen/size_values_big"
            android:gravity="center"/>
    </TableRow>
</RelativeLayout>